ch15/kubernetes/product/product-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-services
  labels:
    app: product-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-services
  template:
    metadata:
      labels:
        app: product-services
    spec:
      containers:
        - name: product-services
          image: wxesquevixos/product-services:latest
          ports:
            - containerPort: 8080
